--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   encoding: unicode
   database: multi_commerce_development
   pool: 5
-  username: rafaelmazza
+  username: rafael
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -43,7 +43,7 @@ test: &test
   encoding: unicode
   database: multi_commerce_test
   pool: 5
-  username: rafaelmazza
+  username: rafael
   password:
 
 production:
